--- a/app/views/spree/order_mailer/confirm_email.text.erb
+++ b/app/views/spree/order_mailer/confirm_email.text.erb
@@ -7,14 +7,17 @@
 ============================================================
 <% @order.line_items.each do |item| %>
   <%= item.variant.sku %> <%= raw(item.variant.product.name) %> <%= raw(item.variant.options_text) -%> (<%=item.quantity%>) @ <%= item.variant.display_amount %> = <%= item.display_amount %>
+  <% @%>
 <% end %>
 ============================================================
-<%= t('order_mailer.confirm_email.subtotal', :subtotal => @order.display_item_total) %>
+<%= #t('order_mailer.confirm_email.subtotal', :subtotal => @order.display_item_total) %>
+<%= @order.display_item_total %>
 
 <% @order.adjustments.eligible.each do |adjustment| %>
   <%= raw(adjustment.label) %> <%= adjustment.display_amount %>
 <% end %>
 
-<%= t('order_mailer.confirm_email.total', :total => @order.display_total) %>
+<%= #t('order_mailer.confirm_email.total', :total => @order.display_total) %>
+<%= @order.display_total %>
 
 <%= t('order_mailer.confirm_email.thanks') %>
