--- a/app/views/spree/order_mailer/cancel_email.text.erb
+++ b/app/views/spree/order_mailer/cancel_email.text.erb
@@ -9,8 +9,12 @@
   <%= item.variant.sku %> <%= raw(item.variant.product.name) %> <%= raw(item.variant.options_text) -%> (<%=item.quantity%>) @ <%= item.variant.display_amount %> = <%= item.display_amount %>
 <% end %>
 ============================================================
-<%= t('order_mailer.cancel_email.subtotal', :subtotal => @order.display_item_total) %>
+Részösszeg:: <%= @order.display_item_total %>
 <% @order.adjustments.eligible.each do |adjustment| %>
   <%= raw(adjustment.label) %> <%= adjustment.display_amount %>
 <% end %>
-<%= t('order_mailer.cancel_email.total', :total => @order.display_total) %>
+Összesen: <%= @order.display_total %>
+
+Ha nem az Ön kérésére vontuk vissza megrendelést, vagy egyéb észrevétele van, kérjük lépjen velünk kapcsolatba.
+
+Picur Webáruház
