--- a/app/views/spree/order_mailer/cancel_email.text.erb
+++ b/app/views/spree/order_mailer/cancel_email.text.erb
@@ -6,7 +6,7 @@
 <%= t('order_mailer.cancel_email.order_summary_canceled') %>
 ============================================================
 <% @order.line_items.each do |item| %>
-  <%= item.variant.sku %> <%= raw(item.variant.product.name) %> <%= raw(item.variant.options_text) -%> (<%=item.quantity%>) @ <%= item.variant.display_amount %> = <%= item.display_amount %>
+  <%= raw(item.variant.product.name) %> <%= raw(item.variant.options_text) -%> (<%=item.quantity%>) @ <%= item.variant.display_amount %> = <%= item.display_amount %>
 <% end %>
 ============================================================
 Részösszeg:: <%= @order.display_item_total %>
