--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -1,6 +1,14 @@
 <br />
 <figure id="logo" data-hook><%= link_to root_path do%><%= image_tag('store/a_baranyok_hallgatnak.png')%><% end %></figure>
-
+ <STYLE type="text/css">
+   h2.kek {
+   	color: #5cabff;
+   	text-align: center
+   }
+ </STYLE>
+<div>
+  <h2 class="kek">picurwebaruhaz@gmail.com   +36-70-426-5375</h2>
+</div>
 <header id="header" class="row" data-hook>
   <div class="columns six"><br /></div>
   <%= render :partial => 'spree/shared/nav_bar' %>
